--- a/Code/mainLauncher/CMakeLists.txt
+++ b/Code/mainLauncher/CMakeLists.txt
@@ -3,9 +3,11 @@ add_executable(mainLauncher mainLauncher.cpp)
 
 target_link_libraries(mainLauncher PUBLIC src pugixml sfml-graphics)
 
-add_custom_target(copy-resources ALL DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/Hero.png)
-add_custom_command(OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/Hero.png
-                   DEPENDS ${CMAKE_SOURCE_DIR}/resources/Hero.png
-                   COMMAND ${CMAKE_COMMAND} -E copy
-                           ${CMAKE_SOURCE_DIR}/resources/Hero.png
-                           ${CMAKE_CURRENT_BINARY_DIR})
+add_custom_target(copy-resources ALL DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/resources)
+file(GLOB RESOURCES CONFIGURE_DEPENDS ${CMAKE_SOURCE_DIR}/resources/*.*)
+add_custom_command(OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/resources
+                   DEPENDS ${CMAKE_SOURCE_DIR}/resources
+                   COMMAND ${CMAKE_COMMAND} -E make_directory ${CMAKE_CURRENT_BINARY_DIR}/resources
+                   COMMAND ${CMAKE_COMMAND} -E copy_if_different
+                           ${RESOURCES}
+                           ${CMAKE_CURRENT_BINARY_DIR}/resources)
