--- a/Code/mainLauncher/CMakeLists.txt
+++ b/Code/mainLauncher/CMakeLists.txt
@@ -1,7 +1,7 @@
 
 add_executable(mainLauncher mainLauncher.cpp)
 
-target_link_libraries(mainLauncher PUBLIC src pugixml sfml-graphics)
+target_link_libraries(mainLauncher PUBLIC src pugixml sfml-graphics sfml-audio)
 
 add_custom_target(copy-resources ALL DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/resources)
 file(GLOB RESOURCES CONFIGURE_DEPENDS ${CMAKE_SOURCE_DIR}/resources/*.*)
@@ -11,3 +11,8 @@ add_custom_command(OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/resources
                    COMMAND ${CMAKE_COMMAND} -E copy_if_different
                            ${RESOURCES}
                            ${CMAKE_CURRENT_BINARY_DIR}/resources)
+
+file(GLOB_RECURSE DYNAMIC_LIBS CONFIGURE_DEPENDS ${CMAKE_SOURCE_DIR}/lib/${ARCH}/*.dll)
+file(COPY ${DYNAMIC_LIBS} DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+
+
